# tauri-plugin-oauth

./: Cargo.toml  README.md  build.rs
.github/: audit.yml  format.yml
examples/vanilla/: package.json
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: start.toml
permissions/schemas/: schema.json
src/: lib.rs
