[package]
name = "tauri-plugin-oauth"
version = "0.0.0-alpha.0"
authors = ["FabianLars <fabianlars@fabianlars.de>"]
description = "A Tauri plugin for spawning a localhost server. Needed for some oauth flows (Login with X)."
edition = "2021"
rust-version = "1.64"
license = "MIT OR Apache-2.0"
include = ["src/**", "Cargo.toml", "LICENSE_*"]
readme = "README.md"
repository = "https://github.com/FabianLars/tauri-plugin-oauth"

[dependencies]
httparse = "1"
log = "0.4"
serde = "1"
tauri = "2.0.0-alpha.16"
url = "2"